menuboxes initialized with specified width and height

--- a/engine.html
+++ b/engine.html
@@ -64,6 +64,7 @@ $def with (name)
       var game_end = ""
       var game_end_timer = 30
       var level_editor
+      var pause_menu
 
 
       /* Called once when a game state is activated. Use it for one-time setup code. */
@@ -79,6 +80,9 @@ $def with (name)
           player.board.fillLevel(player_level,player_stage)
         else
           player.board.fill(player_level,player_stage)
+
+        // pause menu
+        pause_menu = new MenuBox("pause",player.board.board.x,player.board.board.y,BOARD_WIDTH*ITEM_WIDTH,30)
 
         // level editor
         if (level_edit)
@@ -580,6 +584,55 @@ $def with (name)
 
       }
 
+      function MenuBox(title,x,y,width,height) {
+
+        console.log("constructing menubox at (" + x + "," + y + ")")
+
+
+        var SPRITE_WIDTH = 10
+
+        this.title = title
+
+        this.x = x
+        this.y = y
+        this.items = new Array() // menu items
+
+        this.sprite_sheet = new jaws.SpriteSheet({
+          image: "./static/images/MENUBOX_SPRITES.gif", frame_size: [SPRITE_WIDTH,SPRITE_WIDTH]})
+
+        var edge_width  = width - SPRITE_WIDTH*2
+        var edge_height = height - SPRITE_WIDTH*2
+
+        this.sprite_nw = new jaws.Sprite({x:x, y:y, image: this.sprite_sheet.frames[0]})
+        this.sprite_n = new jaws.Sprite({x:x + SPRITE_WIDTH, y:y, image: this.sprite_sheet.frames[1]})
+        this.sprite_ne = new jaws.Sprite({x:x + SPRITE_WIDTH + edge_width, y:y, image: this.sprite_sheet.frames[2]})
+        this.sprite_w = new jaws.Sprite({x:x, y:y + SPRITE_WIDTH, image: this.sprite_sheet.frames[3]})
+        this.sprite_e = new jaws.Sprite({x:x + SPRITE_WIDTH + edge_width, y:y + SPRITE_WIDTH, image: this.sprite_sheet.frames[4]})
+        this.sprite_sw = new jaws.Sprite({x:x, y:y + SPRITE_WIDTH + edge_height, image: this.sprite_sheet.frames[5]})
+        this.sprite_s = new jaws.Sprite({x:x + SPRITE_WIDTH, y:y + SPRITE_WIDTH + edge_height, image: this.sprite_sheet.frames[6]})
+        this.sprite_se = new jaws.Sprite({x:x + SPRITE_WIDTH + edge_width, y:y + SPRITE_WIDTH + edge_height, image: this.sprite_sheet.frames[7]})
+
+        // fix widths and heights for edges
+        this.sprite_n.width = this.sprite_s.width = edge_width
+        this.sprite_w.height = this.sprite_e.height = edge_height
+
+
+
+        this.draw = function() {
+
+          this.sprite_nw.draw()
+          this.sprite_n.draw()
+          this.sprite_ne.draw()
+          this.sprite_w.draw()
+          this.sprite_e.draw()
+          this.sprite_sw.draw()
+          this.sprite_s.draw()
+          this.sprite_se.draw()
+
+        }
+
+      }
+
       function LevelEditor(board) {
 
         this.x = board.board.x + ITEM_WIDTH * (BOARD_WIDTH + 1)
@@ -1064,8 +1117,10 @@ $def with (name)
           if (!level_edit)
             jaws.context.fillText(this.player.timer.clock_text, this.board.x + BOARD_WIDTH * ITEM_WIDTH + 100, this.board.y + 125)
 
-          if (pause)
+          if (pause) {
+            pause_menu.draw()
             return
+          }
 
           // draw all stacks in this board and containing items
           for (var i=0; i < this.stacks.length; i++) {
@@ -2311,7 +2366,7 @@ $def with (name)
     jaws.onload = function() {
       console.log("Bugs: need to check if there's enough flasks for lose condition")
       jaws.unpack()     
-      jaws.assets.add(["./static/images/cursor.gif","./static/images/BLUE.gif","./static/images/GREEN.gif","./static/images/RED.gif","./static/images/YELLOW.gif","./static/images/PURPLE.gif","./static/images/WHITE.gif","./static/images/ORANGE.gif","./static/images/POTION_EMPTY.gif","./static/images/POTION_BLUE.gif","./static/images/POTION_GREEN.gif","./static/images/POTION_RED.gif","./static/images/POTION_YELLOW.gif","./static/images/POTION_PURPLE.gif","./static/images/POTION_WHITE.gif","./static/images/POTION_ORANGE.gif","./static/images/POTION_SPRITES.gif","./static/images/ROBOT_RED.gif","./static/images/ROBOT_WHITE.gif","./static/images/ROBOT_YELLOW.gif","./static/images/ROBOT_PURPLE.gif","./static/images/ROBOT_GREEN.gif","./static/images/ROBOT_BLUE.gif","./static/images/ROBOT_ORANGE.gif","./static/images/ROBOT_RED_DEATH.gif","./static/images/ROBOT_YELLOW_DEATH.gif","./static/images/ROBOT_PURPLE_DEATH.gif","./static/images/ROBOT_RED_SPLASH.gif","./static/images/ROBOT_BLUE_SPLASH.gif","./static/images/ROBOT_YELLOW_SPLASH.gif","./static/images/ROBOT_GREEN_SPLASH.gif","./static/images/ROBOT_PURPLE_SPLASH.gif","./static/images/ROBOT_ORANGE_SPLASH.gif","./static/images/BOARD.gif"])
+      jaws.assets.add(["./static/images/cursor.gif","./static/images/BLUE.gif","./static/images/GREEN.gif","./static/images/RED.gif","./static/images/YELLOW.gif","./static/images/PURPLE.gif","./static/images/WHITE.gif","./static/images/ORANGE.gif","./static/images/POTION_EMPTY.gif","./static/images/POTION_BLUE.gif","./static/images/POTION_GREEN.gif","./static/images/POTION_RED.gif","./static/images/POTION_YELLOW.gif","./static/images/POTION_PURPLE.gif","./static/images/POTION_WHITE.gif","./static/images/POTION_ORANGE.gif","./static/images/POTION_SPRITES.gif","./static/images/ROBOT_RED.gif","./static/images/ROBOT_WHITE.gif","./static/images/ROBOT_YELLOW.gif","./static/images/ROBOT_PURPLE.gif","./static/images/ROBOT_GREEN.gif","./static/images/ROBOT_BLUE.gif","./static/images/ROBOT_ORANGE.gif","./static/images/ROBOT_RED_DEATH.gif","./static/images/ROBOT_YELLOW_DEATH.gif","./static/images/ROBOT_PURPLE_DEATH.gif","./static/images/ROBOT_RED_SPLASH.gif","./static/images/ROBOT_BLUE_SPLASH.gif","./static/images/ROBOT_YELLOW_SPLASH.gif","./static/images/ROBOT_GREEN_SPLASH.gif","./static/images/ROBOT_PURPLE_SPLASH.gif","./static/images/ROBOT_ORANGE_SPLASH.gif","./static/images/BOARD.gif","./static/images/MENUBOX_SPRITES.gif"])
       if (name_entered)
         jaws.start(MenuState)  // Our convenience function jaws.start() will load assets, call setup and loop update/draw in 60 FPS
       else
